# Universal-Sub-Trans

./: .flake8  .gitignore  README.md  design_doc.md  main.py  pyproject.toml
.agent/rules/: 01-code-style.md  02-log-rule.md
.github/workflows/: ci.yml
backend/api/: bridge.py
backend/core/: ai_engine.py  audio_proc.py  srt_utils.py  whisper_svc.py
backend/models/: schema.py
backend/services/: config_mgr.py  dep_mgr.py  hardware_mgr.py  logger.py  platform_mgr.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  i18n.ts  main.ts
frontend/src/api/: bridge.ts
frontend/src/components/: ResumeModal.vue  Sidebar.vue  TitleBar.vue
frontend/src/store/: app.ts
frontend/src/views/: SettingsView.vue  SystemView.vue  TranslateView.vue
scripts/: package_app.py
